[project]
name = "tetris-pygame"
version = "0.0.1"
authors = [
  { name="Łukasz Łukaszewski", email="lulkaszmlukaszewski@gmail.com" },
]
description = "Tetris game made with pygame"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lukmiik/tetris"
Issues = "https://github.com/lukmiik/tetris/issues"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
